--- a/Tensor Flow (31)/Introduction to Tensor Flow.ipynb
+++ b/Tensor Flow (31)/Introduction to Tensor Flow.ipynb
@@ -17,92 +17,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Installing tensorflow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tensorflow in /home/codespace/.python/current/lib/python3.12/site-packages (2.18.0)\n",
-      "Requirement already satisfied: absl-py>=1.0.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (2.1.0)\n",
-      "Requirement already satisfied: astunparse>=1.6.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (1.6.3)\n",
-      "Requirement already satisfied: flatbuffers>=24.3.25 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (24.12.23)\n",
-      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (0.6.0)\n",
-      "Requirement already satisfied: google-pasta>=0.1.1 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (0.2.0)\n",
-      "Requirement already satisfied: libclang>=13.0.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (18.1.1)\n",
-      "Requirement already satisfied: opt-einsum>=2.3.2 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (3.4.0)\n",
-      "Requirement already satisfied: packaging in /home/codespace/.local/lib/python3.12/site-packages (from tensorflow) (24.2)\n",
-      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.3 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (5.29.3)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in /home/codespace/.local/lib/python3.12/site-packages (from tensorflow) (2.32.3)\n",
-      "Requirement already satisfied: setuptools in /home/codespace/.local/lib/python3.12/site-packages (from tensorflow) (75.6.0)\n",
-      "Requirement already satisfied: six>=1.12.0 in /home/codespace/.local/lib/python3.12/site-packages (from tensorflow) (1.17.0)\n",
-      "Requirement already satisfied: termcolor>=1.1.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (2.5.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in /home/codespace/.local/lib/python3.12/site-packages (from tensorflow) (4.12.2)\n",
-      "Requirement already satisfied: wrapt>=1.11.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (1.17.2)\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (1.69.0)\n",
-      "Requirement already satisfied: tensorboard<2.19,>=2.18 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (2.18.0)\n",
-      "Requirement already satisfied: keras>=3.5.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (3.8.0)\n",
-      "Requirement already satisfied: numpy<2.1.0,>=1.26.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (2.0.2)\n",
-      "Requirement already satisfied: h5py>=3.11.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (3.12.1)\n",
-      "Requirement already satisfied: ml-dtypes<0.5.0,>=0.4.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorflow) (0.4.1)\n",
-      "Requirement already satisfied: wheel<1.0,>=0.23.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from astunparse>=1.6.0->tensorflow) (0.45.1)\n",
-      "Requirement already satisfied: rich in /home/codespace/.python/current/lib/python3.12/site-packages (from keras>=3.5.0->tensorflow) (13.9.4)\n",
-      "Requirement already satisfied: namex in /home/codespace/.python/current/lib/python3.12/site-packages (from keras>=3.5.0->tensorflow) (0.0.8)\n",
-      "Requirement already satisfied: optree in /home/codespace/.python/current/lib/python3.12/site-packages (from keras>=3.5.0->tensorflow) (0.14.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/codespace/.local/lib/python3.12/site-packages (from requests<3,>=2.21.0->tensorflow) (3.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/codespace/.local/lib/python3.12/site-packages (from requests<3,>=2.21.0->tensorflow) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/codespace/.local/lib/python3.12/site-packages (from requests<3,>=2.21.0->tensorflow) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/codespace/.local/lib/python3.12/site-packages (from requests<3,>=2.21.0->tensorflow) (2024.8.30)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorboard<2.19,>=2.18->tensorflow) (3.7)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorboard<2.19,>=2.18->tensorflow) (0.7.2)\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in /home/codespace/.python/current/lib/python3.12/site-packages (from tensorboard<2.19,>=2.18->tensorflow) (3.1.3)\n",
-      "Requirement already satisfied: MarkupSafe>=2.1.1 in /home/codespace/.local/lib/python3.12/site-packages (from werkzeug>=1.0.1->tensorboard<2.19,>=2.18->tensorflow) (3.0.2)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in /home/codespace/.python/current/lib/python3.12/site-packages (from rich->keras>=3.5.0->tensorflow) (3.0.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /home/codespace/.local/lib/python3.12/site-packages (from rich->keras>=3.5.0->tensorflow) (2.18.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /home/codespace/.python/current/lib/python3.12/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow) (0.1.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install tensorflow"
+    "## Installing tensorflow\n",
+    "\n",
+    "```python  \n",
+    "    pip install tensorflow\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Version of TensorFlow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<module 'tensorflow._api.v2.version' from '/home/codespace/.python/current/lib/python3.12/site-packages/tensorflow/_api/v2/version/__init__.py'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf  \n",
-    "print(tf.version) "
+    "## Version of TensorFlow\n",
+    "\n",
+    "To check the version of TensorFlow use:\n",
+    "\n",
+    "```python\n",
+    "    print(tf.version) \n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Tensors\n",
+    "\n",
+    "\"A tensor is a generalization of vectors and matrices to potentially higher dimensions. Internally, TensorFlow represents tensors as n-dimensional arrays of base datatypes.\"\n",
+    "\n",
+    "Each tensor has a data type and a shape.\n",
+    "\n",
+    "**Data Types Include:** float32, int32, string and others.\n",
+    "\n",
+    "**Shape:** Represents the dimension of data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Tensors\n",
+    "\n",
+    "```python\n",
+    "    string = tf.Variable(\"this is a string\", tf.string) \n",
+    "    number = tf.Variable(324, tf.int16)\n",
+    "    floating = tf.Variable(3.567, tf.float64)\n",
+    "```\n",
+    "\n",
+    "> The following tensors are 0 degree tensors or Scalars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rank of Tensors\n",
+    "\n",
+    "The rank of a tensor is the number of dimnsions invloved in the tensor\n",
+    "\n",
+    "```python\n",
+    "    rank1_tensor = tf.Variable([\"Test\"], tf.string) \n",
+    "    rank2_tensor = tf.Variable([[\"test\", \"ok\"], [\"test\", \"yes\"]], tf.string)\n",
+    "\n",
+    "    tf.rank(rank2_tensor)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shape of Tensors\n",
+    "\n",
+    "The shape of a tensor is simply the number of elements that exist in each dimension.\n",
+    "\n",
+    "```python\n",
+    "    rank2_tensor.shape\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Changing Shape\n",
+    "\n",
+    "There are often many shapes that have the same number of elements, making it convient to be able to change the shape of a tensor.\n",
+    "\n",
+    "```python\n",
+    "    tensor1 = tf.ones([1,2,3])  # tf.ones() creates a shape [1,2,3] tensor full of ones\n",
+    "    tensor2 = tf.reshape(tensor1, [2,3,1]) # reshape existing data to shape [2,3,1]\n",
+    "    tensor3 = tf.reshape(tensor2, [3, -1]) ## -1 tells the tensor to calculate the size of the dimension in that place\n",
+    "                                           # this will reshape the tensor to [3,3]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slicing Tensors\n",
+    "\n",
+    "The slice operator can be used on tensors to select specific axes or elements.\n",
+    "\n",
+    "```python\n",
+    "    # Creating a 2D tensor\n",
+    "    matrix = [[1,2,3,4,5],\n",
+    "              [6,7,8,9,10],\n",
+    "              [11,12,13,14,15],\n",
+    "              [16,17,18,19,20]]\n",
+    "\n",
+    "    tensor = tf.Variable(matrix, dtype=tf.int32) \n",
+    "    print(tf.rank(tensor))\n",
+    "    print(tensor.shape)\n",
+    "    \n",
+    "    three = tensor[0,2]  # selects the 3rd element from the 1st row\n",
+    "    print(three)  # -> 3\n",
+    "\n",
+    "    row1 = tensor[0]  # selects the first row\n",
+    "    print(row1)\n",
+    "\n",
+    "    column1 = tensor[:, 0]  # selects the first column\n",
+    "    print(column1)\n",
+    "\n",
+    "    row_2_and_4 = tensor[1::2]  # selects second and fourth row\n",
+    "    print(row_2_and_4)\n",
+    "\n",
+    "    column_1_in_row_2_and_3 = tensor[1:3, 0]\n",
+    "    print(column_1_in_row_2_and_3)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sources\n",
+    "\n",
+    "Most of the information is taken direclty from the TensorFlow website which can be found below.\n",
+    "\n",
+    "[TensorFlow Guide](https://www.tensorflow.org/guide/tensor)\n",
+    "\n",
+    "[FreeCodeCamp](https://colab.research.google.com/drive/1F_EWVKa8rbMXi3_fG0w7AtcscFq7Hi7B#forceEdit=true&sandboxMode=true)\n"
+   ]
   }
  ],
  "metadata": {
